MDEV-25509 Atomic DDL: Assertion `err != DB_DUPLICATE_KEY' fails                 after previous error upon multi-RENAME

- InnoDB fails to rename the foreign key constraint while
rollbacking the rename operation. In that case, InnoDB should
rename the FK constraint too.